[project]
name = "slug-line"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Bruce Eckel", email = "MindviewInc@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/slug_line"]

[project.scripts]
slugline = 'slug_line.slug_line:main'
